Fixed styles for number buttons, aligned buttons

--- a/src/styles/Calculator.module.css
+++ b/src/styles/Calculator.module.css
@@ -31,7 +31,7 @@
     justify-content: space-between;
     flex: column;
     gap: 20px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 .middleContentWrapper {
@@ -40,18 +40,21 @@
     display: flex;
 }
 
-.numbersWrapper{
+.numbersWrapper {
     width: 75%;
     height: 50%;
-    /* background-color: rgb(142, 100, 144) */
+    /* background-color: rgb(142, 100, 144); */
+    display: grid;
+    grid-template-columns: 1.5fr 1.5fr 1.25fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 .specialOpWrapper{
     width: 25%;
-    height: 50%;
+    height: 70%;
     /* background-color:rgb(255, 224, 51); */
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    gap: 20px;
+    gap: 55px;
 }
