--- a/src/styles/NumberButton.module.css
+++ b/src/styles/NumberButton.module.css
@@ -1,5 +1,15 @@
 .buttonWrapper {
     width: 100px;
     height: 70px;
+    /* background-color: gray; */
+}
+
+.buttonStyles {
+    width: 100%;
+    height: 100%;
     background-color: gray;
+    color: white;
+    font-size: 2rem;
+    font-weight: 700;
+    border-radius: 10px;
 }
